--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -12,5 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Run Qodana
-        uses: JetBrains/Qodana@v2022.2.2
+        uses: JetBrains/qodana-action@v2022.2.2
