--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Create Docker Directory
+        run: mkdir docker
       - name: Copy and rename JAR
         run: cp target/*-jar-with-dependencies.jar docker/PaperJarDownloader.jar
       - name: Change directory
