--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/paper-jar-downloader:latest
