--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: 'linux/amd64,linux/arm64,linux/arm'
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
