Use logger instead of println

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>${kotlinVersion}</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
 
 </project>
