--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -11,3 +11,5 @@ jobs:
           fetch-depth: 0
       - name: Run Qodana
         uses: JetBrains/qodana-action@v2023.3.2
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
