Switch qodana linter to jvm-community

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,4 +1,4 @@
 version: 1.0
-linter: jetbrains/qodana-jvm:2023.3
+linter: jetbrains/qodana-jvm-community:2024.1
 profile:
   name: qodana.recommended
