--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: 'linux/amd64,linux/arm64/v8,linux/ppc64le'
+          platforms: 'linux/amd64,linux/arm64/v8,linux/ppc64le,linux/s390x'
           sbom: true
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/paper-jar-downloader:latest
