--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,4 +1,4 @@
 version: 1.0
-linter: jetbrains/qodana-jvm-community:2024.1
+linter: jetbrains/qodana-jvm-community:latest
 profile:
   name: qodana.recommended
