--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,3 @@
-#file: noinspection SpellCheckingInspection
 name: Upload to Docker Hub
 on:
   push:
@@ -12,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
+      - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v3
       - name: Setup Java
         uses: actions/setup-java@v4
