--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Java CI - Build
 
-on: [ pull_request ]
+# On pull request and push except to master
+on:
+  pull_request:
+  push:
+    branches-ignore:
+      - master
 
 jobs:
   build:
