Rework Qodana Workflow to not use action cache

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -14,5 +14,8 @@ jobs:
           fetch-depth: 0
       - name: Run Qodana
         uses: JetBrains/qodana-action@latest
+        uses: JetBrains/qodana-action@latest         timeout-minutes: 20
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+        with:
+          args: --clear-cache
