Fix duplicated Qodana uses/timeout lines

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -13,8 +13,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Run Qodana
-        uses: JetBrains/qodana-action@latest
-        uses: JetBrains/qodana-action@latest         timeout-minutes: 20
+        uses: JetBrains/qodana-action@latest`r`n        timeout-minutes: 20
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
